fix: add '.overflow-ellipsis' class

--- a/src/assets/styles/utils.css
+++ b/src/assets/styles/utils.css
@@ -78,3 +78,9 @@
 .main-content > div {
     z-index: 0;
 }
+
+.overflow-ellipsis {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
